2011-02-21  Lars Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-finish-retrieve-group-infos): Add a kludge to use the
	given method as in the group name if we're using an extended method.

	* gnus-start.el (gnus-get-unread-articles): Extend the methods so that
	we're sure to get unique server names, and we don't output two async
	commands in the same buffer.  This fixes an NNTP hang for some users.

2011-02-21  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: No Gnus v0.11 is released.

2011-02-21  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-next-article): Add a kludge to reselect the
	summary buffer before reading going to the next buffer.  This avoids
	putting the point in the group buffer if you `C-g' the command.

	* auth-source.el (auth-source-netrc-parse): Add an in-memory netrc
	cache (for now) to make ~/.authinfo.gpg files usable.

	* nnfolder.el (copyright-update): Define for the compiler.

	* auth-source.el (auth-source-search): Fix unbound variable.

2011-02-19  Glenn Morris  <rgm@gnu.org>

	* gnus.el (gnus-meta): Doc fix.

2011-02-19  Chong Yidong  <cyd@stupidchicken.com>

	* nnfolder.el (nnfolder-save-buffer): Don't let-bind copyright-update,
	in case it's not yet loaded.

2011-02-20  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-wait-for-response): Ensure that we get the entire
	line we're waiting for.

2011-02-19  Darren Hoo  <darren.hoo@gmail.com>  (tiny change)

	* gnus-art.el (gnus-article-next-page-1): Because customized mode-line
	face with line-width greater than zero will cause RET in gnus summary
	buffer to scroll down article page-wise because auto vscroll happens,
	it should be temporalily disabled when doing a scroll-up.

2011-02-19  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-parse-copied-articles): Allow for "<foo> OK"
	outputs from the server.

2011-02-18  Antoine Levitt  <antoine.levitt@gmail.com>  (tiny change)
